--- a/ckc-race-analyzer/package.json
+++ b/ckc-race-analyzer/package.json
@@ -10,6 +10,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
+    "@types/react-input-mask": "^3.0.6",
     "@types/react-router-dom": "^5.3.3",
     "csp-html-webpack-plugin": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
