--- a/ckc-race-analyzer/package.json
+++ b/ckc-race-analyzer/package.json
@@ -13,6 +13,7 @@
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
+    "swiper": "^11.2.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
